--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,4 +52,51 @@
   text-align: center;
 }
 
+.kino-wrapper {
+  height: 100vh;
+  background-image: url("/assets/img/login-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+.kino-wrapper nav {
+  background-color: #f59947;
+  display: flex;
+  justify-content: center;
+}
+.kino-wrapper nav .nav-wrapper {
+  width: 80%;
+}
+.kino-wrapper nav .nav-wrapper .logged-in-username {
+  margin-left: 15%;
+}
+@media screen and (max-width: 992px) {
+  .kino-wrapper nav .nav-wrapper .logged-in-username {
+    float: right;
+    margin-left: 0;
+  }
+}
+.kino-wrapper nav .brand-logo {
+  margin-left: 20px;
+}
+.kino-wrapper > .movies-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.kino-wrapper > .movies-wrapper > .container {
+  width: 80%;
+  max-width: 1480px;
+  margin-top: 50px;
+}
+@media screen and (max-width: 489px) {
+  .kino-wrapper > .movies-wrapper > .container .movie-row .card.horizontal {
+    flex-direction: column;
+  }
+  .kino-wrapper > .movies-wrapper > .container .movie-row .card.horizontal .card-image {
+    margin: 0 auto;
+  }
+}
+.kino-wrapper > .movies-wrapper > .container .movie-row .card.horizontal .card-image img {
+  max-height: 250px;
+}
+
 /*# sourceMappingURL=style.css.map */
